--- a/proj.android/res/values/strings.xml
+++ b/proj.android/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">FlappyBird</string>
-	<string name="ad_unit_id">a15289ac58b83d3</string>
+    <string name="app_name">Open Bird</string>
 </resources>
